fix spacing and use var

--- a/extension/src/popup/components/WarningMessages/styles.scss
+++ b/extension/src/popup/components/WarningMessages/styles.scss
@@ -2,6 +2,6 @@
   margin-bottom: 1rem;
 
   &--header {
-    font-weight: 500;
+    font-weight: var(--font-weight-medium);
   }
 }
